Update instructions text

--- a/gostop.html
+++ b/gostop.html
@@ -165,7 +165,7 @@
 
     <div class="instructions">
         When the light turns GREEN, tap SPACEBAR as fast as you can.<br>
-        When it turns RED, stop as quickly as possible! Your stop time is measured.
+        When it turns RED, stop immediately. You will be counted off for taps after it turns RED.
     </div>
 
     <div class="history" id="history"></div>
